attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1737479399243.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/build
[ 18%] Built target dfs_crypto
[ 36%] Built target dfs_store
[ 45%] Building CXX object CMakeFiles/dfs_network.dir/src/network/peer_manager.cpp.o
In file included from /home/runner/workspace/include/network/peer_manager.hpp:13,
                 from /home/runner/workspace/src/network/peer_manager.cpp:1:
/home/runner/workspace/include/network/tcp_server.hpp:14:57: error: ‘PeerManager’ has not been declared
   14 |   TCP_Server(uint16_t port, const std::string& address, PeerManager& peer_manager;
      |                                                         ^~~~~~~~~~~
/home/runner/workspace/include/network/tcp_server.hpp:14:82: error: expected ‘)’ before ‘;’ token
   14 | erver(uint16_t port, const std::string& address, PeerManager& peer_manager;
      |      ~                                                                    ^
      |                                                                           )
/home/runner/workspace/include/network/tcp_server.hpp:28:3: error: ‘PeerManager’ does not name a type
   28 |   PeerManager& peer_manager_;
      |   ^~~~~~~~~~~
/home/runner/workspace/src/network/peer_manager.cpp:24:6: error: no declaration matches ‘void dfs::network::TCP_Server::create_peer(const boost::system::error_code&, std::shared_ptr<boost::asio::basic_stream_socket<boost::asio::ip::tcp> >)’
   24 | void TCP_Server::create_peer(const boost::system::error_code& error,
      |      ^~~~~~~~~~
/home/runner/workspace/src/network/peer_manager.cpp:24:6: note: no functions named ‘void dfs::network::TCP_Server::create_peer(const boost::system::error_code&, std::shared_ptr<boost::asio::basic_stream_socket<boost::asio::ip::tcp> >)’
/home/runner/workspace/include/network/tcp_server.hpp:12:7: note: ‘class dfs::network::TCP_Server’ defined here
   12 | class TCP_Server {
      |       ^~~~~~~~~~
make[2]: *** [CMakeFiles/dfs_network.dir/build.make:104: CMakeFiles/dfs_network.dir/src/network/peer_manager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:114: CMakeFiles/dfs_network.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
